--- a/.github/workflows/release-node.yml
+++ b/.github/workflows/release-node.yml
@@ -31,6 +31,7 @@ jobs:
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
+            setup: true
             build: |-
               cd autocorrect-node &&
               set -e &&
@@ -39,6 +40,7 @@ jobs:
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
+            setup: true
             build: |-
               cd autocorrect-node &&
               set -e &&
@@ -96,7 +98,10 @@ jobs:
       - name: Setup toolchain
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
-        shell: bash
+        shell: |-
+          set -e &&
+          rustup install 1.85.0 &&
+          rustup default 1.85.0 &&
       - name: Setup node x86
         if: matrix.settings.target == 'i686-pc-windows-msvc'
         run: yarn config set supportedArchitectures.cpu "ia32"
