--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/cargo@v1
-        if: startsWith(github.ref, 'refs/tags/v')
-        name: Release Crate
-        with:
-          command: publish
-          args: --manifest-path autocorrect/Cargo.toml --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      # - uses: actions-rs/cargo@v1
+      #   if: startsWith(github.ref, 'refs/tags/v')
+      #   name: Release Crate
+      #   with:
+      #     command: publish
+      #     args: --manifest-path autocorrect/Cargo.toml --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
   build:
     needs:
