--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -14,10 +14,10 @@
     "monaco-editor": "^0.40.0",
     "postcss": "^8.4.12",
     "sass": "^1.50.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.19",
     "typescript": "^4.9.3",
-    "autocorrect-node": "^2.7.0",
-    "vite": "^4.3.2",
+    "autocorrect-node": "workspace:*",
+    "vite": "^4.5.14",
     "vite-plugin-wasm": "^3.1.0"
   },
   "dependencies": {
