--- a/.github/workflows/release-rubygem.yml
+++ b/.github/workflows/release-rubygem.yml
@@ -1,22 +1,11 @@
-name: "Release Crate & RubyGem"
+name: "Release RubyGem"
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - support-ruby-4.0
 jobs:
-  publish_crate:
-    name: Publish Crate
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rs/cargo@v1
-        if: startsWith(github.ref, 'refs/tags/v')
-        name: Release Crate
-        with:
-          command: publish
-          args: --manifest-path autocorrect/Cargo.toml --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
-
   build:
-    needs:
-      - publish_crate
     name: Build compile gems
     runs-on: ubuntu-latest
     strategy:
@@ -30,9 +19,9 @@ jobs:
           - x86_64-linux-musl
     steps:
       - uses: actions/checkout@v4
-      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.3.0
+      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.4.4
         with:
-          ruby-version: "3.4"
+          ruby-version: "4.0"
           bundler-cache: true
           cargo-cache: true
           cargo-vendor: false
@@ -41,11 +30,11 @@ jobs:
         run: |
           touch Rakefile
 
-      - uses: oxidize-rb/actions/cross-gem@v1.3.0
+      - uses: oxidize-rb/actions/cross-gem@v1.4.4
         with:
           platform: ${{ matrix.ruby-platform }}
           working-directory: autocorrect-rb/
-          ruby-versions: "3.4, 3.3, 3.2" # optional
+          ruby-versions: "4.0, 3.4, 3.3"
 
       - name: Upload Gem
         uses: actions/upload-artifact@v4
@@ -55,14 +44,12 @@ jobs:
 
   build_source:
     name: Build source gem
-    needs:
-      - publish_crate
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.3.0
+      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.4.4
         with:
-          ruby-version: "3.4"
+          ruby-version: "4.0"
           bundler-cache: false
           cargo-cache: true
           cargo-vendor: true
@@ -89,7 +76,7 @@ jobs:
     steps:
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.4"
+          ruby-version: "4.0"
           bundler-cache: true
       - uses: actions/download-artifact@v4
         with:
@@ -97,8 +84,9 @@ jobs:
 
       - name: Display structure of built gems
         run: |
-          mv -f **/autocorrect-*.gem ./
-          ls -lha autocorrect-*.gem
+          mkdir -p dist/
+          cp -n cross-gem-*/*.gem dist/
+          tree
         working-directory: pkg/
 
       - name: Publish to RubyGem
@@ -110,7 +98,7 @@ jobs:
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${RUBYGEM_TOKEN}\n" > $HOME/.gem/credentials
-          for filename in autocorrect-*.gem; do
+          for filename in dist/autocorrect-*.gem; do
             echo $filename
             gem push $filename
           done
